# exercise

./: .gitignore
CPP/TypeCasting/CPP_study/: CPP_study.sln  CPP_study.vcxproj  CPP_study.vcxproj.filters  cpp_study.cpp  cpp_study_castingMamuri.cpp  cpp_study_review.cpp
CPP/TypeCasting/CPP_study/x64/Debug/: CPP_study.exe.recipe  CPP_study.ilk  CPP_study.vcxproj.FileListAbsolute.txt  vc143.idb
CPP/TypeCasting/CPP_study/x64/Debug/CPP_study.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CPP_study.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DesignPatterns/StrategyPattern/: Duck.cpp  Duck.h  StrategyPattern.sln  StrategyPattern.vcxproj  StrategyPattern.vcxproj.filters  main.cpp
DesignPatterns/StrategyPattern/x64/Debug/: StrategyPattern.exe.recipe  StrategyPattern.ilk  StrategyPattern.vcxproj.FileListAbsolute.txt  vc143.idb
DesignPatterns/StrategyPattern/x64/Debug/StrategyPattern.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  StrategyPattern.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TextRPG/TextRPG/: CPP_study.cpp  Creature.h  Field.cpp  Field.h  Game.cpp  Game.h  Monster.cpp  Monster.h  Player.cpp  Player.h  TextRPG.sln  TextRPG.vcxproj  TextRPG.vcxproj.filters
TextRPG/TextRPG/x64/Debug/: TextRPG.exe.recipe  TextRPG.ilk  TextRPG.vcxproj.FileListAbsolute.txt  vc143.idb
TextRPG/TextRPG/x64/Debug/TextRPG.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TextRPG.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
codingtest/: CMakeLists.txt
codingtest/success/: BOJ1008_AdivB.cpp  BOJ10828_stack.cpp  BOJ10866_deque.cpp  BOJ1094_stick.cpp  BOJ1920_findaNumber.cpp  BOJ2750_sort1.cpp
openGL/: CMakeLists.txt  Dependency.cmake  code.bat  imgui.ini
openGL/physics/: hiphysics.cpp  hiphysics.h
openGL/shader/: per_vertex_color.vs  simple.fs  simple.vs  texture.fs
openGL/src/: buffer.cpp  buffer.h  common.cpp  common.h  context.cpp  context.h  image.cpp  image.h  main.cpp  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_layout.cpp  vertex_layout.h
